--- a/src/pages/Join-us/Join-us.scss
+++ b/src/pages/Join-us/Join-us.scss
@@ -15,7 +15,7 @@ linear-gradient(93.46deg, #E7B000 0%, #F1C32D 100%);
     &__subtitle {
         max-width: 39.25rem;
         margin: 0 auto;
-        margin-bottom: 32px;
+        margin-bottom: 2rem;
 
         & p {
             color: var(--silver);
