--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,5 +1,5 @@
 .home {
-    min-height: calc((100vh - 1vw) - 5.1rem);
+    min-height: calc(100vh - 4.25rem);
     background: url('../../assets/images/banner.png') no-repeat;
     background-size: cover;
     background-position: center;
@@ -31,8 +31,8 @@
             max-width: 100%;
             padding: 0.625rem;
             background: rgba(112, 112, 112, 0.5);
-            border-radius: 8px;
-            margin-bottom: 15px;
+            border-radius: 0.5rem;
+            margin-bottom: 0.9375rem;
         }
     }
 
@@ -46,12 +46,12 @@
         & p {
             font-size: 1.5rem;
             padding: 0;
-            margin-bottom: 32px;
+            margin-bottom: 2rem;
             color: #fff;
 
             @media screen and (max-width: 1023.98px) {
                 font-size: 1.125rem;
-                margin: 10px 0;
+                margin: 0.625rem 0;
             }
         }
     }
