--- a/src/pages/Project/Project.scss
+++ b/src/pages/Project/Project.scss
@@ -1,8 +1,8 @@
 .project {
 
     ::-webkit-scrollbar {
-        width: 5px;
-        height: 5px;
+        width: 0.3125rem;
+        height: 0.3125rem;
     }
     
     ::-webkit-scrollbar-track {
@@ -24,10 +24,10 @@
         &::before {
             content: '';
             position: absolute;
-            top: 13px;
+            top: 0.8125rem;
             left: calc(-100% + 10rem);
             min-width: 100%;
-            height: 2px;
+            height: 0.125rem;
             margin-right: 2rem;
             background: linear-gradient(93.46deg, #E7B000 0%, #F1C32D 100%);
 
@@ -48,7 +48,7 @@
         align-items: center;
         overflow: auto;
         margin-left: 10rem;
-        padding-bottom: 5px;
+        padding-bottom: 0.3125rem;
 
         @media screen and (max-width: 1023.98px) {
             margin-left: 0;
@@ -75,7 +75,7 @@
 
 
         &:not(:last-child) {
-            margin-right: 32px;
+            margin-right: 2rem;
         }
     }
 
@@ -83,7 +83,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin-top: 56px;
+        margin-top: 3.5rem;
         overflow: hidden;
 
         @media screen and (max-width: 1023.98px) {
@@ -113,7 +113,7 @@
 
     @media screen and (max-width: 1023.98px) {
         max-width: 100%;
-        margin-bottom: 30px;
+        margin-bottom: 1.875rem;
     }
 
     &__flag {
@@ -127,7 +127,7 @@
             font-weight: 400;
             line-height: 140%; /* 19.6px */
             letter-spacing: 0.25px;
-            border-radius: 8px;
+            border-radius: 0.5rem;
             border: 1px solid rgba(65, 198, 2, 1)
         }
 
@@ -141,17 +141,17 @@
 
         & span {
             display: block;
-            margin-bottom: 15px;
+            margin-bottom: 0.9375rem;
         }
     }
 
     &__text {
-        margin-bottom: 32px;
+        margin-bottom: 2rem;
 
         & p {
 
             &:not(:last-child) {
-                margin: 0 0 15px 0;
+                margin: 0 0 0.9375rem 0;
             }
         }
     }
