--- a/src/pages/With-us/With-us.scss
+++ b/src/pages/With-us/With-us.scss
@@ -26,22 +26,22 @@
     & .swiper-pagination  {
 
         & .swiper-pagination-bullet  {
-            width: 44px;
-            height: 2px;
+            width: 2.75rem;
+            height: 0.125rem;
             background: rgb(157, 157, 157);
             transition: all 0.3s;
             border-radius: 0;
 
             @media screen and (max-width: 767.98px) {
-                width: 22px;
+                width: 1.375rem;
             }
 
             &.swiper-pagination-bullet-active {
-                width: 124px;
+                width: 7.75rem;
                 background: linear-gradient(93.46deg, #E7B000 0%, #F1C32D 100%);
 
                 @media screen and (max-width: 767.98px) {
-                    width: 44px;
+                    width: 2.75rem;
                 }
             }
         }
@@ -50,7 +50,7 @@
     &__box-img {
         min-width: 5rem;
         height: 5rem;
-        border-radius: 8px;
+        border-radius: 0.5rem;
         margin-right: 1rem;
 
         @media screen and (max-width: 575.98px) {
